# BundleParc

./: .gitignore  Dockerfile  README.md  labelseg_predict.py  labelseg_train.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-package.yml
BundleParc/: predict.py
BundleParc/dataset/: bundleparc_data_module.py  bundleparc_dataset.py  bundleparc_pretrain_dataset.py  create_label_dataset.py  transforms.py
BundleParc/models/: bundleparc.py  bundleparcnet.py  utils.py
BundleParc/utils/: constants.py  utils.py
LabelSeg/dataset/: create_fodf_dataset.py  create_label_dataset.py  create_pretrain_dataset.py  create_samtrack_bundle_dataset.py  create_samtrack_dataset.py  data_module.py  finetune_data_module.py  finetune_dataset.py  fodf_dataset.py  fodf_file_dataset.py  fodf_multi_dataset.py  labelseg_data_module.py  labelseg_dataset.py  labelseg_pretrain_dataset.py  samtrack_data_module.py  transforms.py
LabelSeg/models/: common.py  encodings.py  labelseg.py  labelsegnet.py  (+6 more)
ccscripts/: .hcp_pretrain.sh.swm  .hcp_pretrain.sh.swn  .hcp_pretrain.sh.swp  .hcp_pretrain_small.sh.swp  .samu_hcp105.sh.swp  hcp_pretrain.sh  hcp_pretrain_ds.sh  hcp_pretrain_small.sh  samtrack.sh  samu_hcp105.sh  samu_hcp105_ds.sh  tractoinferno_mae_pretrain.sh  tractoinferno_mae_pretrain_find_batch_size.sh  ukb_mae_pretrain.sh
custom_scripts/: plot_dice.py  track_hcp105.sh  track_pentera3t_72.sh  track_tractoinferno.sh  track_tractoinferno_tractseg.sh
scripts/: bundleparc_migrate.py  bundleparc_predict.py  bundleparc_train.py  labelseg_predict.py  labelseg_train.py
