[build-system]
requires = ["setuptools>=40.1.0", "wheel", "cython", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["BundleParc", "scripts"]

[project]
name = "BundleParc"
authors = [
    {name = "Antoine Théberge", email = "antoine.theberge@usherbrooke.ca"},
]
description = "BundleParc"
readme = "README.md"
requires-python = ">=3.10"
keywords = [""]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lightning==2.4.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "timm==1.0.8",
    "comet_ml",
    "monai==1.3.0",
    "h5py",
    "nibabel",
    "scilpy",
    'importlib-metadata; python_version<"3.10"',
]
version = "0.0.1"

[project.scripts]
bundleparc_train = "scripts.bundleparc_train:main"
bundleparc_predict = "scripts.bundleparc_predict:main"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
